logs/Slang/generated/hdlconv/hdlconvertor_p294.sv.log
name: hdlconvertor_p294
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:5:1: error: language feature not yet supported
let eq(x, y = b) = x == y;
^~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:5:18: error: expected expression
let eq(x, y = b) = x == y;
                 ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:5:26: error: expected '='
let eq(x, y = b) = x == y;
                         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:7:1: error: language feature not yet supported
let tmp = a && b;
^~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:7:9: error: expected expression
let tmp = a && b;
        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:7:17: error: expected '='
let tmp = a && b;
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:8:1: error: language feature not yet supported
a1: assert property (@(posedge clk) eq(p,q));
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:10:13: error: use of undeclared identifier 'eq'
a2: assert (eq(r)); // use default for y
            ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:11:13: error: use of undeclared identifier 'tmp'
a3: assert (tmp);
            ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:21:1: error: language feature not yet supported
a1: assert property (@(posedge clk) (m.p == m.q));
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:32:1: error: language feature not yet supported
let y = x;
^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:32:7: error: expected expression
let y = x;
      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:32:10: error: expected '='
let y = x;
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:37:9: error: use of undeclared identifier 'y'
b = a | y;
        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p294.sv:49:1: error: use of undeclared identifier 'b'
b = a | (top.x);
^
